# MaxPhisher-pt-BR

./: LICENSE  README.md  clique-em-mim.bat  help.py
files/: email.json
github/workflows/: pypi.yml
max/files/: pyproject.toml
