[build-system]
requires = [
    "setuptools>=58.0.4",
    "wheel>=0.37.0"
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "MaxPhisher (pt-BR)"
version = "1.2.0"
readme = "README.md"
license = "MIT and GENERAL PUBLIC LICENSE"
repository = "https://github.com/githubhackorg/MaxPhisher-pt-BR"
include = ["README.md", "LICENSE", "files/email.json"]
description = "Um script de phishing feito em python para phishing de login, phishing de imagens, phishing de vídeo e muito mais."
authors = ["KasRoudra <kasroudrakrd@gmail.com> and githubhackorg <gitmax@givmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.3.0"
beautifulsoup4 = "^4.12"
rich = "^13.0.0"

[tool.poetry.scripts]
maxphisher = "maxphisher:main"

[build-system.sdist]
formats = ["gztar"]

[build-system.bdist_wheel]
universal = false
